--- a/croche-rena.html
+++ b/croche-rena.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pelúcias | Plushy</title>
-    <meta name="description" content="Pelúcias | Plushy.">
+    <title>Crochês | Plushy</title>
+    <meta name="description" content="Crochês | Plushy.">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,8 +36,8 @@
     <main class="intro">
         <div class="titulo-intro-bg">
             <div class="titulo-intro container">
-                <p class="subtitulo-intro">As mais fofas, as mais macias</p>
-                <h1 class="titulo">Nossas Pelúcias</h1>
+                <p class="subtitulo-intro">Delicados para toda forma de amor</p>
+                <h1 class="titulo">Nossos Crochês</h1>
             </div>
         </div>
 
@@ -45,16 +45,16 @@
             <div class="pelucia-bg container">
                 <div class="pelucia-conteudo">
                     <div class="pelucia-imagens">
-                        <img src="/img/pelucias/urso-grande.jpg" alt="Urso marrom">
-                        <img src="/img/pelucias/urso-peq-1.jpg" alt="Urso creme">
-                        <img src="/img/pelucias/urso-peq-2.jpg" alt="Urso rosa">
-                        <img src="/img/pelucias/urso-peq-3.jpg" alt="Urso branco">
+                        <img src="/img/croches/rena-grande.jpg" alt="Crochê rena">
+                        <img src="/img/croches/la-peq-1.jpg" alt="Fio de lã">
+                        <img src="/img/croches/la-peq-2.jpg" alt="Fio de lã">
+                        <img src="/img/croches/la-peq-3.jpg" alt="Fio de lã">
                     </div>
                     <div class="pelucia-texto">
-                        <h2 class="preco-titulo">Pelúcia Urso</h2>
-                        <p class="pelucia-desc-1 preco-valor">R$59.90</p>
-                        <p class="pelucia-desc-1 preco-descricao">Pelúcia de urso na cor marrom, confeccionado artesanalmente em tecido Toronto Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos ou micropérola).</p>
-                        <p class="pelucia-desc-1 preco-descricao">Altura: 40cm.</p>
+                        <h2 class="preco-titulo">Crochê Rena</h2>
+                        <p class="pelucia-desc-1 preco-valor">R$49.90</p>
+                        <p class="pelucia-desc-1 preco-descricao">Crochê de rena na cor marrom, confeccionado artesanalmente em Fio Ternura Poliéster lavável Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos).</p>
+                        <p class="pelucia-desc-1 preco-descricao">Altura: 30cm.</p>
                         <p class="pelucia-desc-1 preco-descricao"><span>Customização de cores e demais preferências no carrinho: Disponível.</span></p>
                         <div class="pelucia-botao">
                             <a class="botao" href="./">Adicionar ao Carrinho</a>
