--- a/croche.html
+++ b/croche.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pelúcias | Plushy</title>
-    <meta name="description" content="Pelúcias | Plushy.">
+    <title>Crochês | Plushy</title>
+    <meta name="description" content="Crochês | Plushy.">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,37 +36,61 @@
     <main class="intro">
         <div class="titulo-intro-bg">
             <div class="titulo-intro container">
-                <p class="subtitulo-intro">As mais fofas, as mais macias</p>
-                <h1 class="titulo">Nossas Pelúcias</h1>
+                <p class="subtitulo-intro">Delicados para toda forma de amor</p>
+                <h1 class="titulo">Nossos Crochês</h1>
             </div>
         </div>
 
-        <main class="pelucia">
-            <div class="pelucia-bg container">
-                <div class="pelucia-conteudo">
-                    <div class="pelucia-imagens">
-                        <img src="/img/pelucias/urso-grande.jpg" alt="Urso marrom">
-                        <img src="/img/pelucias/urso-peq-1.jpg" alt="Urso creme">
-                        <img src="/img/pelucias/urso-peq-2.jpg" alt="Urso rosa">
-                        <img src="/img/pelucias/urso-peq-3.jpg" alt="Urso branco">
+        <main class="pelucias">
+            <div class="pelucias-item-bg">
+                <div class="pelucias-item container">
+                    <div class="pelucias-imagem">
+                        <img src="/img/geral/croches-rena.jpg" alt="Crochê rena">
                     </div>
-                    <div class="pelucia-texto">
-                        <h2 class="preco-titulo">Pelúcia Urso</h2>
-                        <p class="pelucia-desc-1 preco-valor">R$59.90</p>
-                        <p class="pelucia-desc-1 preco-descricao">Pelúcia de urso na cor marrom, confeccionado artesanalmente em tecido Toronto Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos ou micropérola).</p>
-                        <p class="pelucia-desc-1 preco-descricao">Altura: 40cm.</p>
-                        <p class="pelucia-desc-1 preco-descricao"><span>Customização de cores e demais preferências no carrinho: Disponível.</span></p>
-                        <div class="pelucia-botao">
-                            <a class="botao" href="./">Adicionar ao Carrinho</a>
+                    <div class="pelucias-conteudo">
+                        <h2 class="preco-titulo">Crochê Rena</h2>
+                        <p class="preco-valor">R$49.90</p>
+                        <p class="preco-descricao pelucias-decoracao-1">Crochê de rena na cor creme, confeccionado artesanalmente em Fio Ternura Poliéster lavável Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos).</p>
+                        <div class="pelucias-botao">
+                            <a class="botao" href="./croche-rena.html">Saiba mais</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="pelucia-extra">
-                <div class="pelucia-extra-bg">
-                    <h3 class="preco-descricao">Dica:</h3>
-                    <p class="preco-descricao">Todas as preferências de cor e maciez podem ser alteradas no Carrinho.</p>
+
+            <div class="pelucias-item-bg">
+                <div class="pelucias-item-2 container">
+                    <div class="pelucias-conteudo">
+                        <h2 class="preco-titulo">Crochê Coelho</h2>
+                        <p class="preco-valor">R$49.90</p>
+                        <p class="preco-descricao pelucias-decoracao-2">Crochê de coelho na cor branca, confeccionado artesanalmente em Fio Ternura Poliéster lavável Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos).</p>
+                        <div class="pelucias-botao">
+                            <a class="botao" href="./croche-rena.html">Saiba mais</a>
+                        </div>
+                    </div>
+                    <div class="pelucias-imagem">
+                        <img src="/img/geral/croches-coelho.jpg" alt="Crochê coelho">
+                    </div>
                 </div>
+            </div>
+
+            <div class="pelucias-item-bg">
+                <div class="pelucias-item container">
+                    <div class="pelucias-imagem">
+                        <img src="/img/geral/croches-cacto.jpg" alt="Crochê cacto">
+                    </div>
+                    <div class="pelucias-conteudo">
+                        <h2 class="preco-titulo">Crochê Cacto</h2>
+                        <p class="preco-valor">R$49.90</p>
+                        <p class="preco-descricao pelucias-decoracao-1">Crochê de cacto na cor verde, confeccionado artesanalmente em Fio Ternura Poliéster lavável Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos).</p>
+                        <div class="pelucias-botao">
+                            <a class="botao" href="./croche-rena.html">Saiba mais</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="pelucias-link-bg">
+                <a class="pelucias-link saiba-mais" href="./croche.html">Ver mais crochês</a>
             </div>
         </main>
 
