--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <h2 class="titulo">Nossos amores<br>em forma de Crochê</h2>
         <ul class="croche-selecao">
             <li class="croche-home-quadrado">
-                <a href="./croche-coelho.html">
+                <a href="./croche-rena.html">
                     <img src="/img/geral/img-croche1.jpg" alt="Crochê rena">
                     <h3 class="produto-preco preco-titulo">Crochê Rena</h3>
                     <p class="produto-valor preco-valor">R$49.90</p>
