--- a/pelucias.html
+++ b/pelucias.html
@@ -90,13 +90,15 @@
                 </div>
             </div>
             <div class="pelucias-link-bg">
-                <a class="pelucias-link saiba-mais" href="./pelucias.html">Saiba mais</a>
+                <a class="pelucias-link saiba-mais" href="./pelucias.html">Ver mais pelúcias</a>
             </div>
         </main>
 
         <footer class="footer-bg">
             <div class="footer container">
-                <img src="/img-icone/icone-rosa/Plushy-branco.svg" alt="Plushy">
+                <a href="./" class="footer-logo">
+                    <img src="/img-icone/icone-rosa/Plushy-branco.svg" alt="Plushy">
+                </a>
                 <div class="footer-contato">
                     <h2 class="footer-titulo">Contato</h2>
                     <ul class="footer-descricao">
