--- a/comissoes.html
+++ b/comissoes.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pelúcias | Plushy</title>
-    <meta name="description" content="Pelúcias | Plushy.">
+    <title>Comissões | Plushy</title>
+    <meta name="description" content="Comissões | Plushy.">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,61 +36,36 @@
     <main class="intro">
         <div class="titulo-intro-bg">
             <div class="titulo-intro container">
-                <p class="subtitulo-intro">As mais fofas, as mais macias</p>
-                <h1 class="titulo">Nossas Pelúcias</h1>
+                <p class="subtitulo-intro">Faça do seu jeito</p>
+                <h1 class="titulo">Pelúcia Customizada (Comissão)</h1>
             </div>
         </div>
 
-        <main class="pelucias">
-            <div class="pelucias-item-bg">
-                <div class="pelucias-item container">
-                    <div class="pelucias-imagem">
-                        <img src="/img/geral/pelucias-urso.jpg" alt="Pelúcia Urso Marrom">
+        <main class="pelucia">
+            <div class="pelucia-bg container">
+                <div class="pelucia-conteudo">
+                    <div class="pelucia-imagens">
+                        <img src="/img/comissao/img-urso-cust.jpg" alt="Customização urso">
+                        <img src="/img/comissao/img-costura.jpg" alt="Costura">
+                        <img src="/img/comissao/img-tecido.jpg" alt="Tecido">
+                        <img src="/img/comissao/img-linha.jpg" alt="Rolos de linha">
                     </div>
-                    <div class="pelucias-conteudo">
-                        <h2 class="preco-titulo">Pelúcia Urso</h2>
-                        <p class="preco-valor">R$59.90</p>
-                        <p class="preco-descricao pelucias-decoracao-1">Pelúcia de urso peludo na cor marrom, confeccionado artesanalmente em tecido Toronto Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos ou micropérola).</p>
-                        <div class="pelucias-botao">
-                            <a class="botao" href="./pelucias-urso.html">Saiba mais</a>
+                    <div class="pelucia-texto">
+                        <h2 class="preco-titulo">Comissões</h2>
+                        <p class="pelucia-desc-1 preco-valor">Orçamento</p>
+                        <p class="pelucia-desc-1 preco-descricao">Pelúcias totalmente customizadas, do início ao fim do processo, por você. Nos mostre seu design, escolha os tecidos que preferir e o enchimento que se adequa ao nível de maciez desejado.</p>
+                        <p class="pelucia-desc-1 preco-descricao">Receba atualizações do processo e decida os próximos passos para que possamos produzir algo 100% seu.</p>
+                        <div class="pelucia-botao">
+                            <a class="botao" href="/croche-rena.html">Faça seu orçamento</a>
                         </div>
                     </div>
                 </div>
             </div>
-
-            <div class="pelucias-item-bg">
-                <div class="pelucias-item-2 container">
-                    <div class="pelucias-conteudo">
-                        <h2 class="preco-titulo">Pelúcia Polvo</h2>
-                        <p class="preco-valor">R$29.90</p>
-                        <p class="preco-descricao pelucias-decoracao-2">Pelúcia de polvo em diversas cores, confeccionado artesanalmente em tecido Toronto Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos ou micropérola).</p>
-                        <div class="pelucias-botao">
-                            <a class="botao" href="./pelucias-urso.html">Saiba mais</a>
-                        </div>
-                    </div>
-                    <div class="pelucias-imagem">
-                        <img src="/img/geral/pelucias-polvo.jpg" alt="Pelúcia Polvo Colorido">
-                    </div>
+            <div class="pelucia-extra">
+                <div class="pelucia-extra-bg">
+                    <h3 class="preco-descricao">Ainda em dúvida?</h3>
+                    <p class="preco-descricao">Veja depoimentos dos nossos clientes de Comissões passadas.</p>
                 </div>
-            </div>
-
-            <div class="pelucias-item-bg">
-                <div class="pelucias-item container">
-                    <div class="pelucias-imagem">
-                        <img src="/img/geral/pelucias-cachorro.jpg" alt="Pelúcia Cachorro">
-                    </div>
-                    <div class="pelucias-conteudo">
-                        <h2 class="preco-titulo">Pelúcia Shiba</h2>
-                        <p class="preco-valor">R$59.90</p>
-                        <p class="preco-descricao pelucias-decoracao-1">Pelúcia de cachorro em diversas cores, confeccionado artesanalmente em tecido Toronto Super Soft, com enchimento de Silicone Extra Virgem Macio (tufos ou micropérola).</p>
-                        <div class="pelucias-botao">
-                            <a class="botao" href="./pelucias-urso.html">Saiba mais</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="pelucias-link-bg">
-                <a class="pelucias-link saiba-mais" href="./pelucias.html">Ver mais pelúcias</a>
             </div>
         </main>
 
