--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="introducao-conteudo">
                     <h1 class="titulo">Suas pelúcias do seu jeito</h1>
                     <p class="subtitulo">Somos profissionais quando o assunto é pelúcias customizadas. Nos mostre seu design e traremos à vida suas melhores criações.</p>
-                    <a class="botao" href="./customizacao.html">Crie com a gente</a>
+                    <a class="botao" href="./comissoes.html">Crie com a gente</a>
                 </div>
             </div>
         </main>
