--- a/pelucias-urso.html
+++ b/pelucias-urso.html
@@ -57,7 +57,7 @@
                         <p class="pelucia-desc-1 preco-descricao">Altura: 40cm.</p>
                         <p class="pelucia-desc-1 preco-descricao"><span>Customização de cores e demais preferências no carrinho: Disponível.</span></p>
                         <div class="pelucia-botao">
-                            <a class="botao" href="./">Adicionar ao Carrinho</a>
+                            <a class="botao" href="/pelucias-urso.html">Adicionar ao Carrinho</a>
                         </div>
                     </div>
                 </div>
