formulario+lojas-inicial

--- a/contato.html
+++ b/contato.html
@@ -73,11 +73,11 @@
                         <label class="formulario-titulo" for="telefone">Telefone</label>
                         <input type="text" id="telefone" name="telefone" placeholder="(99) 99999-9999">
                     </div>
-                    <div>
+                    <div class="col-2">
                         <label class="formulario-titulo" for="email">E-mail</label>
                         <input type="text" id="email" name="email" placeholder="seucontato@email.com">
                     </div>
-                    <div>
+                    <div class="col-2">
                         <label class="formulario-titulo" for="mensagem">Mensagem</label>
                         <textarea rows="5" id="mensagem" name="mensagem" placeholder="Como podemos ajudar?"></textarea>
                     </div>
@@ -86,6 +86,46 @@
             </section>
         </div>
     </main>
+
+    <article class="lojas container">
+        <h2 class="titulo">Nossas Lojas</h2>
+        <div class="lojas-conteudo">
+            <div class="lojas-local">
+                <img src="/img/mapas/mapa1-icn.jpg" alt="Mapa marcando o endereço em Rua dos Bobos - 0, Cidade, Estado">
+                <div class="lojas-texto">
+                    <h3 class="lojas-titulo">Loja 1</h3>
+                    <div class="lojas-descricao">
+                        <div class="preco-valor">
+                            <p>Rua dos Bobos - nº 0</p>
+                            <p>Cidade - Estado</p>
+                        </div>
+                        <div class="preco-valor">
+                            <p>+55 (99) 99999-9999</p>
+                            <p>contato@plushy.com</p>
+                        </div>
+                    </div>
+                </div>
+                <p class="lojas-rodape">De segunda à sexta, das 9h às 17h.</p>
+            </div>
+            <div class="lojas-local">
+                <img src="/img/mapas/mapa2-icn.jpg" alt="Mapa marcando o endereço em Rua dos Bobos - 100, Cidade, Estado">
+                <div class="lojas-texto">
+                    <h3 class="lojas-titulo">Loja 2</h3>
+                    <div class="lojas-descricao">
+                        <div class="preco-valor">
+                            <p>Rua dos Bobos - nº 100</p>
+                            <p>Cidade - Estado</p>
+                        </div>
+                        <div class="preco-valor">
+                            <p>+55 (99) 99999-9999</p>
+                            <p>contato@plushy.com</p>
+                        </div>
+                    </div>
+                </div>
+                <p class="lojas-rodape">De segunda à sexta, das 9h às 17h.</p>
+            </div>
+        </div>
+    </article>
 
     <footer class="footer-bg">
         <div class="footer container">
