--- a/comissoes.html
+++ b/comissoes.html
@@ -56,7 +56,7 @@
                         <p class="pelucia-desc-1 preco-descricao">Pelúcias totalmente customizadas, do início ao fim do processo, por você. Nos mostre seu design, escolha os tecidos que preferir e o enchimento que se adequa ao nível de maciez desejado.</p>
                         <p class="pelucia-desc-1 preco-descricao">Receba atualizações do processo e decida os próximos passos para que possamos produzir algo 100% seu.</p>
                         <div class="pelucia-botao">
-                            <a class="botao" href="/croche-rena.html">Faça seu orçamento</a>
+                            <a class="botao" href="/comissoes-form.html">Faça seu orçamento</a>
                         </div>
                     </div>
                 </div>
