--- a/contato.html
+++ b/contato.html
@@ -105,7 +105,7 @@
                         </div>
                     </div>
                 </div>
-                <p class="lojas-rodape">De segunda à sexta, das 9h às 17h.</p>
+                <p class="lojas-horario lojas-rodape">De segunda à sexta, das 9h às 17h.</p>
             </div>
             <div class="lojas-local">
                 <img src="/img/mapas/mapa2-icn.jpg" alt="Mapa marcando o endereço em Rua dos Bobos - 100, Cidade, Estado">
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                 </div>
-                <p class="lojas-rodape">De segunda à sexta, das 9h às 17h.</p>
+                <p class="lojas-horario lojas-rodape">De segunda à sexta, das 9h às 17h.</p>
             </div>
         </div>
     </article>
