--- a/contato.html
+++ b/contato.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato | Plushy</title>
     <meta name="description" content="Contato | Plushy.">
+
+    <link rel="preload" href="/css/style.css" as="style">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -16,7 +20,7 @@
     <header class="header-bg">
         <div class="header container">
             <a href="./" class="header-logo">
-                <img src="/img-icone/icone-roxo/Plushy.svg" alt="Plushy">
+                <img src="/img-icone/icone-roxo/Plushy.svg" width="100" height="40" alt="Plushy">
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu">
@@ -27,8 +31,8 @@
                 </ul>
             </nav>
             <div class="header-extra">
-                <a href="/"><img src="/img-icone/icone-roxo/perfil.svg" alt="perfil"></a>
-                <a href="/"><img src="/img-icone/icone-roxo/carrinho.svg" alt="carrinho"></a>
+                <a href="/"><img src="/img-icone/icone-roxo/perfil.svg" width="32" height="32" alt="perfil"></a>
+                <a href="/"><img src="/img-icone/icone-roxo/carrinho.svg" width="32" height="32" alt="carrinho"></a>
             </div>
         </div>
     </header>
@@ -57,9 +61,9 @@
                     <a class="contato-descricao" href="mailto:contato@plushy.com">contato@plushy.com</a>
                 </address>
                 <div class="contato-redes">
-                    <a href="/contato.html"><img src="/img-icone/icone-roxo/instagram-c.svg" alt="Instagram Plushy"></a>
-                    <a href="/contato.html"><img src="/img-icone/icone-roxo/facebook-c.svg" alt="Facebook Plushy"></a>
-                    <a href="/contato.html"><img src="/img-icone/icone-roxo/twitter-c.svg" alt="Twitter Plushy"></a>
+                    <a href="/contato.html"><img src="/img-icone/icone-roxo/instagram-c.svg" width="40" height="40" alt="Instagram Plushy"></a>
+                    <a href="/contato.html"><img src="/img-icone/icone-roxo/facebook-c.svg" width="40" height="40" alt="Facebook Plushy"></a>
+                    <a href="/contato.html"><img src="/img-icone/icone-roxo/twitter-c.svg" width="40" height="40" alt="Twitter Plushy"></a>
                 </div>
             </section>
 
@@ -91,7 +95,7 @@
         <h2 class="titulo">Nossas Lojas</h2>
         <div class="lojas-conteudo">
             <div class="lojas-local">
-                <img src="/img/mapas/mapa1-icn.jpg" alt="Mapa marcando o endereço em Rua dos Bobos - 0, Cidade, Estado">
+                <img src="/img/mapas/mapa1-icn.jpg" width="1180" height="960" alt="Mapa marcando o endereço em Rua dos Bobos - 0, Cidade, Estado">
                 <div class="lojas-texto">
                     <h3 class="lojas-titulo">Loja 1</h3>
                     <div class="lojas-descricao">
@@ -108,7 +112,7 @@
                 <p class="lojas-horario lojas-rodape">De segunda à sexta, das 9h às 17h.</p>
             </div>
             <div class="lojas-local">
-                <img src="/img/mapas/mapa2-icn.jpg" alt="Mapa marcando o endereço em Rua dos Bobos - 100, Cidade, Estado">
+                <img src="/img/mapas/mapa2-icn.jpg" width="1180" height="960" alt="Mapa marcando o endereço em Rua dos Bobos - 100, Cidade, Estado">
                 <div class="lojas-texto">
                     <h3 class="lojas-titulo">Loja 2</h3>
                     <div class="lojas-descricao">
@@ -130,7 +134,7 @@
     <footer class="footer-bg">
         <div class="footer container">
             <a href="./" class="footer-logo">
-                <img src="/img-icone/icone-rosa/Plushy-branco.svg" alt="Plushy">
+                <img src="/img-icone/icone-rosa/Plushy-branco.svg" width="101" height="40" alt="Plushy">
             </a>
             <div class="footer-contato">
                 <h2 class="footer-titulo">Contato</h2>
@@ -144,9 +148,9 @@
                     <li>Cidade - Estado Qualquer</li>
                 </ul>
                 <div class="footer-descricao-icones">
-                    <a href="./"><img src="/img-icone/icone-rosa/instagram.svg" alt="Instagram Plushy"></a>
-                    <a href="./"><img src="/img-icone/icone-rosa/facebook.svg" alt="Facebook Plushy"></a>
-                    <a href="./"><img src="/img-icone/icone-rosa/twitter.svg" alt="Twitter Plushy"></a>
+                    <a href="./"><img src="/img-icone/icone-rosa/instagram.svg" width="41" height="40" alt="Instagram Plushy"></a>
+                    <a href="./"><img src="/img-icone/icone-rosa/facebook.svg" width="41" height="40" alt="Facebook Plushy"></a>
+                    <a href="./"><img src="/img-icone/icone-rosa/twitter.svg" width="41" height="40" alt="Twitter Plushy"></a>
                 </div>
             </div>
             <div class="footer-informacoes">
