--- a/croche-rena.html
+++ b/croche-rena.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crochês | Plushy</title>
     <meta name="description" content="Crochês | Plushy.">
+
+    <link rel="preload" href="/css/style.css" as="style">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -16,7 +20,7 @@
     <header class="header-bg">
         <div class="header container">
             <a href="./" class="header-logo">
-                <img src="/img-icone/icone-roxo/Plushy.svg" alt="Plushy">
+                <img src="/img-icone/icone-roxo/Plushy.svg" width="100" height="40" alt="Plushy">
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu">
@@ -27,8 +31,8 @@
                 </ul>
             </nav>
             <div class="header-extra">
-                <a href="/"><img src="/img-icone/icone-roxo/perfil.svg" alt="perfil"></a>
-                <a href="/"><img src="/img-icone/icone-roxo/carrinho.svg" alt="carrinho"></a>
+                <a href="/"><img src="/img-icone/icone-roxo/perfil.svg" width="32" height="32" alt="perfil"></a>
+                <a href="/"><img src="/img-icone/icone-roxo/carrinho.svg" width="32" height="32" alt="carrinho"></a>
             </div>
         </div>
     </header>
@@ -45,10 +49,10 @@
             <div class="pelucia-bg container">
                 <div class="pelucia-conteudo">
                     <div class="pelucia-imagens">
-                        <img src="/img/croches/rena-grande.jpg" alt="Crochê rena">
-                        <img src="/img/croches/la-peq-1.jpg" alt="Fio de lã">
-                        <img src="/img/croches/la-peq-2.jpg" alt="Fio de lã">
-                        <img src="/img/croches/la-peq-3.jpg" alt="Fio de lã">
+                        <img src="/img/croches/rena-grande.jpg" width="1120" height="1120" alt="Crochê rena">
+                        <img src="/img/croches/la-peq-1.jpg" width="1120" height="1120" alt="Fio de lã">
+                        <img src="/img/croches/la-peq-2.jpg" width="1120" height="1038" alt="Fio de lã">
+                        <img src="/img/croches/la-peq-3.jpg" width="1092" height="1120" alt="Fio de lã">
                     </div>
                     <div class="pelucia-texto">
                         <h2 class="preco-titulo">Crochê Rena</h2>
@@ -73,7 +77,7 @@
         <footer class="footer-bg">
             <div class="footer container">
                 <a href="./" class="footer-logo">
-                    <img src="/img-icone/icone-rosa/Plushy-branco.svg" alt="Plushy">
+                    <img src="/img-icone/icone-rosa/Plushy-branco.svg" width="101" height="40" alt="Plushy">
                 </a>
                 <div class="footer-contato">
                     <h2 class="footer-titulo">Contato</h2>
@@ -87,9 +91,9 @@
                         <li>Cidade - Estado Qualquer</li>
                     </ul>
                     <div class="footer-descricao-icones">
-                        <a href="./"><img src="/img-icone/icone-rosa/instagram.svg" alt="Instagram Plushy"></a>
-                        <a href="./"><img src="/img-icone/icone-rosa/facebook.svg" alt="Facebook Plushy"></a>
-                        <a href="./"><img src="/img-icone/icone-rosa/twitter.svg" alt="Twitter Plushy"></a>
+                        <a href="./"><img src="/img-icone/icone-rosa/instagram.svg" width="41" height="40" alt="Instagram Plushy"></a>
+                        <a href="./"><img src="/img-icone/icone-rosa/facebook.svg" width="41" height="40" alt="Facebook Plushy"></a>
+                        <a href="./"><img src="/img-icone/icone-rosa/twitter.svg" width="41" height="40" alt="Twitter Plushy"></a>
                     </div>
                 </div>
                 <div class="footer-informacoes">
