--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plushy - Pelúcias Customizadas</title>
     <meta name="description" content="Somos profissionais quando o assunto é pelúcias customizadas. Nos mostre seu design e traremos à vida suas melhores criações.">
+
+    <link rel="preload" href="/css/style.css" as="style">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -16,7 +20,7 @@
     <header class="header-bg">
         <div class="header container">
             <a href="./" class="header-logo">
-                <img src="/img-icone/icone-roxo/Plushy.svg" alt="Plushy">
+                <img src="/img-icone/icone-roxo/Plushy.svg" width="100" height="40" alt="Plushy">
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu">
@@ -27,8 +31,8 @@
                 </ul>
             </nav>
             <div class="header-extra">
-                <a href="/"><img src="/img-icone/icone-roxo/perfil.svg" alt="perfil"></a>
-                <a href="/"><img src="/img-icone/icone-roxo/carrinho.svg" alt="carrinho"></a>
+                <a href="/"><img src="/img-icone/icone-roxo/perfil.svg" width="32" height="32" alt="perfil"></a>
+                <a href="/"><img src="/img-icone/icone-roxo/carrinho.svg" width="32" height="32" alt="carrinho"></a>
             </div>
         </div>
     </header>
@@ -37,7 +41,7 @@
         <main class="introducao-bg">
             <div class="introducao container">
                 <div>
-                    <img src="/img/geral/img-intro.svg" alt="imagem animais fofos">
+                    <img src="/img/geral/img-intro.svg" width="660" height="532" alt="imagem animais fofos">
                 </div>
                 <div class="introducao-conteudo">
                     <h1 class="titulo">Suas pelúcias do seu jeito</h1>
@@ -60,7 +64,7 @@
         <ul class="pelucias-selecao">
             <li class="pelucias-home-quadrado">
                 <a href="./pelucias-urso.html">
-                    <img src="/img/geral/img-urso.jpg" alt="Pelúcia Urso Marrom">
+                    <img src="/img/geral/img-urso.jpg" width="800" height="800" alt="Pelúcia Urso Marrom">
                     <h3 class="produto-preco preco-titulo">Pelúcia Urso</h3>
                     <p class="produto-valor preco-valor">R$59.90</p>
                 </a>
@@ -68,7 +72,7 @@
 
             <li class="pelucias-home-quadrado">
                 <a href="./pelucias.html">
-                    <img src="/img/geral/img-polvo.jpg" alt="Pelúcia Polvo Colorido">
+                    <img src="/img/geral/img-polvo.jpg" width="800" height="800" alt="Pelúcia Polvo Colorido">
                     <h3 class="produto-preco preco-titulo">Pelúcia Polvo</h3>
                     <p class="produto-valor preco-valor">R$29.90</p>
                 </a>
@@ -76,7 +80,7 @@
 
             <li class="pelucias-home-quadrado">
                 <a href="./pelucias.html">
-                    <img src="/img/geral/img-cachorro.jpg" alt="Pelúcia Cachorro Shiba-Inu">
+                    <img src="/img/geral/img-cachorro.jpg" width="800" height="800" alt="Pelúcia Cachorro Shiba-Inu">
                     <h3 class="produto-preco preco-titulo">Pelúcia Shiba</h3>
                     <p class="produto-valor preco-valor">R$59.90</p>
                 </a>
@@ -84,7 +88,7 @@
 
             <li class="pelucias-home-quadrado">
                 <a href="./pelucias.html">
-                    <img src="/img/geral/img-leao.jpg" alt="Pelúcia Leão">
+                    <img src="/img/geral/img-leao.jpg" width="800" height="800" alt="Pelúcia Leão">
                     <h3 class="produto-preco preco-titulo">Pelúcia Leão</h3>
                     <p class="produto-valor preco-valor">R$49.90</p>
                 </a>
@@ -100,7 +104,7 @@
                 <a class="saiba-mais" href="./pelucias.html">Saiba mais</a>
             </div>
             <div class="detalhes-custom-imagem">
-                <img src="/img/geral/img-lagarto.jpg" alt="">
+                <img src="/img/geral/img-lagarto.jpg" width="1560" height="1704" alt="">
             </div>
         </div>
     </article>
@@ -110,7 +114,7 @@
         <ul class="croche-selecao">
             <li class="croche-home-quadrado">
                 <a href="./croche-rena.html">
-                    <img src="/img/geral/img-croche1.jpg" alt="Crochê rena">
+                    <img src="/img/geral/img-croche1.jpg" width="800" height="800" alt="Crochê rena">
                     <h3 class="produto-preco preco-titulo">Crochê Rena</h3>
                     <p class="produto-valor preco-valor">R$49.90</p>
                 </a>
@@ -118,7 +122,7 @@
 
             <li class="croche-home-quadrado">
                 <a href="./croche.html">
-                    <img src="/img/geral/img-croche2.jpg" alt="Crochê coelho">
+                    <img src="/img/geral/img-croche2.jpg" width="801" height="800" alt="Crochê coelho">
                     <h3 class="produto-preco preco-titulo">Crochê Coelho</h3>
                     <p class="produto-valor preco-valor">R$49.90</p>
                 </a>
@@ -126,7 +130,7 @@
 
             <li class="croche-home-quadrado">
                 <a href="./croche.html">
-                    <img src="/img/geral/img-croche3.jpg" alt="Crochê cacto">
+                    <img src="/img/geral/img-croche3.jpg" width="800" height="800" alt="Crochê cacto">
                     <h3 class="produto-preco preco-titulo">Crochê Cacto</h3>
                     <p class="produto-valor preco-valor">R$49.90</p>
                 </a>
@@ -134,7 +138,7 @@
 
             <li class="croche-home-quadrado">
                 <a href="./croche.html">
-                    <img src="/img/geral/img-croche4.jpg" alt="Crochê boneca">
+                    <img src="/img/geral/img-croche4.jpg" width="800" height="800" alt="Crochê boneca">
                     <h3 class="produto-preco preco-titulo">Crochê Boneca</h3>
                     <p class="produto-valor preco-valor">R$49.90</p>
                 </a>
@@ -144,7 +148,7 @@
 
     <section class="depoimento" aria-label="Depoimento">
         <div>
-            <img src="/img/geral/img-crianca.jpg" alt="Criança com uma pelúcia Plushy">
+            <img src="/img/geral/img-crianca.jpg" width="1408" height="888" alt="Criança com uma pelúcia Plushy">
         </div>
         <div class="depoimento-conteudo">
             <blockquote>
@@ -157,7 +161,7 @@
     <footer class="footer-bg">
         <div class="footer container">
             <a href="./" class="footer-logo">
-                <img src="/img-icone/icone-rosa/Plushy-branco.svg" alt="Plushy">
+                <img src="/img-icone/icone-rosa/Plushy-branco.svg" width="101" height="40" alt="Plushy">
             </a>
             <div class="footer-contato">
                 <h2 class="footer-titulo">Contato</h2>
@@ -171,9 +175,9 @@
                     <li>Cidade - Estado Qualquer</li>
                 </ul>
                 <div class="footer-descricao-icones">
-                    <a href="./"><img src="/img-icone/icone-rosa/instagram.svg" alt="Instagram Plushy"></a>
-                    <a href="./"><img src="/img-icone/icone-rosa/facebook.svg" alt="Facebook Plushy"></a>
-                    <a href="./"><img src="/img-icone/icone-rosa/twitter.svg" alt="Twitter Plushy"></a>
+                    <a href="./"><img src="/img-icone/icone-rosa/instagram.svg" width="41" height="40" alt="Instagram Plushy"></a>
+                    <a href="./"><img src="/img-icone/icone-rosa/facebook.svg" width="41" height="40" alt="Facebook Plushy"></a>
+                    <a href="./"><img src="/img-icone/icone-rosa/twitter.svg" width="41" height="40" alt="Twitter Plushy"></a>
                 </div>
             </div>
             <div class="footer-informacoes">
