--- a/comissoes-form.html
+++ b/comissoes-form.html
@@ -5,8 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato | Plushy</title>
-    <meta name="description" content="Contato | Plushy.">
+    <meta name="description" content="Comissões | Plushy.">
+
+    <link rel="preload" href="/css/style.css" as="style">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -16,7 +20,7 @@
     <header class="header-bg">
         <div class="header container">
             <a href="./" class="header-logo">
-                <img src="/img-icone/icone-roxo/Plushy.svg" alt="Plushy">
+                <img src="/img-icone/icone-roxo/Plushy.svg" width="100" height="40" alt="Plushy">
             </a>
             <nav aria-label="primaria">
                 <ul class="header-menu">
@@ -27,8 +31,8 @@
                 </ul>
             </nav>
             <div class="header-extra">
-                <a href="/"><img src="/img-icone/icone-roxo/perfil.svg" alt="perfil"></a>
-                <a href="/"><img src="/img-icone/icone-roxo/carrinho.svg" alt="carrinho"></a>
+                <a href="/"><img src="/img-icone/icone-roxo/perfil.svg" width="32" height="32" alt="perfil"></a>
+                <a href="/"><img src="/img-icone/icone-roxo/carrinho.svg" width="32" height="32" alt="carrinho"></a>
             </div>
         </div>
     </header>
@@ -59,7 +63,7 @@
 
                         <div class="col-2">
                             <label class="formulario-titulo" for="arquivo">Envie um arquivo do projeto</label>
-                            <input type="file" id="arquivo" name="arquivo" placeholder="Clique aqui para enviar um arquivo de imagem (.png, .jpeg) ou arraste e solte o arquivo aqui">
+                            <input type="file" id="arquivo" name="arquivo">
                         </div>
 
                         <div class="comissoes-materiais col-2">
@@ -115,7 +119,36 @@
                         </div>
                         <div>
                             <label class="formulario-titulo" for="estado">Estado</label>
-                            <input type="text" id="estado" name="estado">
+                            <select name="estado" id="estado">
+                                <option selected disabled value="">Selecione</option>
+                                <option value="acre">Acre</option>
+                                <option value="alagoas">Alagoas</option>
+                                <option value="amapa">Amapá</option>
+                                <option value="amazonas">Amazonas</option>
+                                <option value="bahia">Bahia</option>
+                                <option value="ceara">Ceará</option>
+                                <option value="espirito-santo">Espírito Santo</option>
+                                <option value="goias">Goiás</option>
+                                <option value="maranhao">Maranhão</option>
+                                <option value="mato-grosso">Mato Grosso</option>
+                                <option value="mato-grosso-do-sul">Mato Grosso do Sul</option>
+                                <option value="minas-gerais">Minas Gerais</option>
+                                <option value="para">Pará</option>
+                                <option value="paraiba">Paraíba</option>
+                                <option value="parana">Paraná</option>
+                                <option value="pernambuco">Pernambuco</option>
+                                <option value="piaui">Piauí</option>
+                                <option value="rio-de-janeiro">Rio de Janeiro</option>
+                                <option value="rio-grande-do-norte">Rio Grande do Norte</option>
+                                <option value="rio-grande-do-sul">Rio Grande do Sul</option>
+                                <option value="rondonia">Rondônia</option>
+                                <option value="roraima">Roraima</option>
+                                <option value="santa-catarina">Santa Catarina</option>
+                                <option value="sao-paulo">São Paulo</option>
+                                <option value="sergipe">Sergipe</option>
+                                <option value="tocantins">Tocantins</option>
+                                <option value="distrito-federal">Distrito Federal</option>
+                            </select>
                         </div>
                         <div class="termos col-2 formulario-titulo">
                             <input type="checkbox" name="termos" id="termos" value="aceito">
@@ -132,7 +165,7 @@
     <footer class="footer-bg">
         <div class="footer container">
             <a href="./" class="footer-logo">
-                <img src="/img-icone/icone-rosa/Plushy-branco.svg" alt="Plushy">
+                <img src="/img-icone/icone-rosa/Plushy-branco.svg" width="101" height="40" alt="Plushy">
             </a>
             <div class="footer-contato">
                 <h2 class="footer-titulo">Contato</h2>
@@ -146,9 +179,9 @@
                     <li>Cidade - Estado Qualquer</li>
                 </ul>
                 <div class="footer-descricao-icones">
-                    <a href="./"><img src="/img-icone/icone-rosa/instagram.svg" alt="Instagram Plushy"></a>
-                    <a href="./"><img src="/img-icone/icone-rosa/facebook.svg" alt="Facebook Plushy"></a>
-                    <a href="./"><img src="/img-icone/icone-rosa/twitter.svg" alt="Twitter Plushy"></a>
+                    <a href="./"><img src="/img-icone/icone-rosa/instagram.svg" width="41" height="40" alt="Instagram Plushy"></a>
+                    <a href="./"><img src="/img-icone/icone-rosa/facebook.svg" width="41" height="40" alt="Facebook Plushy"></a>
+                    <a href="./"><img src="/img-icone/icone-rosa/twitter.svg" width="41" height="40" alt="Twitter Plushy"></a>
                 </div>
             </div>
             <div class="footer-informacoes">
